--- a/style.css
+++ b/style.css
@@ -73,7 +73,7 @@
   margin-bottom: 50px;
   font-family: "Kanit", sans-serif;
   color: white;
-  font-size: 16px;
+  font-size: 14px;
   letter-spacing: 1px;
   text-transform: uppercase;
   text-align: center;
@@ -105,7 +105,8 @@
   color: white;
 }
 
-.record {
+.distance {
+  text-align: center;
   font-family: "Kanit", sans-serif;
   color: white;
 }
